# Simple-Cairo-Network-example

./: Cargo.toml  README.md
model/: simple_network.onnx
model/cairo_programs/node_0/src/: initializer_0.cairo  initializer_1.cairo  lib.cairo
model/cairo_programs/node_0/src/initializer_0/: chunk_0.cairo
model/cairo_programs/node_1/src/: lib.cairo
model/node_0/: Scarb.toml
model/node_0/src/initializer_0/: chunk_1.cairo
model/node_0/src/initializer_1/: chunk_0.cairo
model/node_1/: Scarb.toml
model/program_args/: node_1.args
model/vm_results/node_1/: program.memory  program.trace
src/: main.rs
